--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/shuding/nextra-docs-template#readme",
   "dependencies": {
+    "@phosphor-icons/react": "^2.1.5",
     "axios": "^1.7.2",
     "next": "^13.0.6",
     "nextra": "latest",
